feat: 添加统一环境检测模块和优化配置管理
- 创建 src/utils/environment.py 实现统一的环境检测
- 修复 src/utils/path_utils.py 中的拼写错误
- 改进 src/utils/config.py 使用纯Python解析配置消除安全隐患
- 更新 requirements.txt 添加缺失的 requests 依赖
- 优化 Dockerfile 构建流程和依赖安装
- 重构 src/utils/timeout_decorator.py 实现统一超时配置
- 添加测试脚本验证环境检测和配置功能

--- a/config.env.example
+++ b/config.env.example
@@ -3,13 +3,48 @@
 # Plex Auto Scan 配置文件示例
 
 # 必需配置项
-MOUNT_PATHS="/vol02/CloudDrive/WebDAV/电影/动画电影 /vol02/CloudDrive/WebDAV/电影/日韩电影"  # 监控目录列表，空格分隔
+# 监控目录列表，空格分隔
+# 多行格式示例（使用反斜杠续行）:
+#   MOUNT_PATHS="/vol02/CloudDrive/WebDAV/电影/动画电影 \
+#                 /vol02/CloudDrive/WebDAV/电影/日韩电影 \
+#                 /mnt/nfs/电视剧/国产剧"
+# 单行格式示例:
+#   MOUNT_PATHS="/vol02/CloudDrive/WebDAV/电影/动画电影 /vol02/CloudDrive/WebDAV/电影/日韩电影"
+MOUNT_PATHS="/vol02/CloudDrive/WebDAV/电影/动画电影 /vol02/CloudDrive/WebDAV/电影/日韩电影"
 PLEX_URL="http://localhost:32400"  # Plex服务器URL
 PLEX_TOKEN="your_plex_token_here"  # Plex访问令牌
 
 # 可选配置项
 EXCLUDE_PATHS=""  # 排除目录列表，空格分隔
 DEBUG=0  # 调试模式 (0=关闭, 1=启用)
+
+# 挂载类型配置（新增）
+# 支持的挂载类型: webdav, nfs, smb, local
+# 格式: /path:mount_type,/path2:mount_type2
+# 如果不配置，程序会自动检测挂载类型
+# 多行格式示例:
+#   MOUNT_CONFIGS="/vol02/CloudDrive/WebDAV:webdav,\
+#                   /mnt/nfs:nfs,\
+#                   /mnt/smb:smb"
+# 单行格式示例:
+#   MOUNT_CONFIGS="/vol02/CloudDrive/WebDAV:webdav,/mnt/nfs:nfs,/mnt/smb:smb"
+MOUNT_CONFIGS=""
+
+# 挂载类型特定参数（新增）
+# WebDAV挂载参数
+WEBDAV_RETRY_COUNT=5      # WebDAV重试次数
+WEBDAV_RETRY_DELAY=10     # WebDAV重试延迟（秒）
+WEBDAV_TIMEOUT=30         # WebDAV超时时间（秒）
+
+# NFS挂载参数
+NFS_RETRY_COUNT=3         # NFS重试次数
+NFS_RETRY_DELAY=5         # NFS重试延迟（秒）
+NFS_TIMEOUT=20            # NFS超时时间（秒）
+
+# SMB挂载参数
+SMB_RETRY_COUNT=5         # SMB重试次数
+SMB_RETRY_DELAY=10        # SMB重试延迟（秒）
+SMB_TIMEOUT=30            # SMB超时时间（秒）
 
 # 文件大小阈值配置 (默认值可在src/config.sh中查看)
 # MIN_FILE_SIZE=209715200  # 最小文件大小阈值 (200MB)
