--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,62 @@
-# 测试目录
-/test_dir/
-/test_files/
-/test_incremental_dir/
-/test_large_dir/
-/test_parallel_dir/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# 测试文件
-/test_*.py
-/test_*.sh
-/test_*.log
-/test_*.txt
-/test_*.new
-/test_*.checksum
-/test_snapshot*
-/src/test_*.py
-/testfiles/
-/tests/
+# Virtual Environment
+venv/
+.venv/
+tmp_venv/
+ENV/
+env/
 
-# 临时文件和目录
-/temp/
-/data/snapshots/
-/output/
-/backups/
-/src/output/
-/src/snapshots/
-*.log
-*.tmp
-*.temp
-/tmp_venv/
-
-# Docker相关
-/.dockerenv
-/docker-compose.yml
-/Dockerfile
-
-# 配置文件
-/config.env
-/data/config.env
-/test_config.env
-
-# IDE相关
-/.idea/
-/.vscode/
+# IDE
+.idea/
+.vscode/
 *.swp
 *.swo
+*~
 
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Data
+data/
+cache/
+
+# Configuration files with sensitive information
+config.env
+config.env.local
+*.env
+!.env.example
+
+# Deploy configuration (contains sensitive NAS information)
+.deploy.conf
+.deploy.conf.local
+
+# Temporary files
+*.tmp
+*.bak
+*.new
