--- a/config.env.example
+++ b/config.env.example
@@ -55,3 +55,21 @@ SMB_TIMEOUT=30            # SMB超时时间（秒）
 # SMB优化参数
 # SMB_SCAN_DELAY=2         # 目录扫描间隔 (秒)
 # MAX_FILES_PER_SCAN=1000  # 单次扫描最大文件数
+
+# 性能优化参数（新增）
+# 并行扫描线程数（建议：5-20，WebDAV路径建议10-15）
+SMB_MAX_WORKERS=10
+
+# WebDAV扫描延迟（秒）- 越小越快，但可能影响稳定性
+# 建议值：0.01-0.1，网络稳定时可设置为0.01
+WEBDAV_SCAN_DELAY=0.01
+
+# WebDAV目录扫描并行度（建议：3-10）
+WEBDAV_COLLECTOR_WORKERS=8
+
+# 批处理大小（建议：500-2000）
+BATCH_SIZE=1000
+
+# 批处理延迟（秒）- 越小越快，但可能影响稳定性
+# 建议值：0.001-0.1，Docker环境可设置为0.001
+BATCH_DELAY=0.001
