feat: 添加挂载点健康检查并优化容器配置
添加挂载点健康检查功能，防止在挂载点失效时继续执行扫描
优化docker-compose配置，添加shared传播属性和更快的重启间隔
将部署相关敏感文件添加到.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ cache/
 
 # Configuration files with sensitive information
 config.env
+# [MOD] 2026-02-28 添加部署相关敏感文件 by AI
+.deploy.conf
+sync_to_nas.sh
 config.env.local
 *.env
 !.env.example
